// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EdgesSelection should match snapshot when customQueryOutput  1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addOrAppendToObject": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "addValueToSubkeyObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "toggleFromArrayInKey": [Function],
      "toggleFromSubArray": [Function],
    }
  }
  addNumber={[MockFunction]}
  addToArray={[MockFunction]}
  customQueryOutput="{ items: [] }"
  customQueryStringHistory={
    Array [
      "q.v()",
    ]
  }
  mapToProps={[Function]}
  removeFromArray={[MockFunction]}
  setStoreState={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`EdgesSelection should match snapshot when no customQueryOutput  1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addOrAppendToObject": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "addValueToSubkeyObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "toggleFromArrayInKey": [Function],
      "toggleFromSubArray": [Function],
    }
  }
  addNumber={[MockFunction]}
  addToArray={[MockFunction]}
  customQueryStringHistory={
    Array [
      "q.v()",
    ]
  }
  mapToProps={[Function]}
  removeFromArray={[MockFunction]}
  setStoreState={[MockFunction]}
>
  <Component />
</Connect>
`;
